5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1771_1580.log
== TEST (2019-05-24 17:28:25) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] = -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
File "XXXX", line 12
    if(notas[cont] = -1):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:29:22) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] = (-1)):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
File "XXXX", line 12
    if(notas[cont] = (-1)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:29:35) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] = 1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
File "XXXX", line 12
    if(notas[cont] = 1):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:29:49) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:31:05) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:33:13) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)-1):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:34:23) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:34:56) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:36:46) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	elif(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(max(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:37:47) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:38:52) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	
	if(notas[cont] == max(notas)):
		n = cont
	
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:39:21) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:43:35) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 0

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		print(notas[cont])
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:44:22) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		print(notas[cont])
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:45:23) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		print(notas[cont])
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:45:58) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(input("Insira os nomes: "))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		print(notas[cont])
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:46:51) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(eval(input("Insira os nomes: ")))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:47:36) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(eval(input("Insira os nomes: ")))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(len(notas))
print(f)
print(a)
print(r)
print(round(sum(notas)/len(notas),2))
print(nomes[n])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:50:27) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(eval(input("Insira os nomes: ")))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(,2))
print(nomes[n])
-- ERROR:
File "XXXX", line 25
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:04:56) 
-- CODE:
from numpy import *

notas = array(eval(input("Insira as notas: ")))
nomes = array(eval(input("Insira os nomes: ")))
cont = 0
f = 0
a = 0
r = 0
n = 1

while(cont < len(notas)):
	if(notas[cont] == -1):
		f += 1
	elif(0 <= notas[cont] < 6):
		r += 1
	elif(6 <= notas[cont] <= 10):
		a += 1
	if(notas[cont] == max(notas)):
		n = cont
	cont += 1
	
print(f)
print(a)
print(r)
print(round(,2))
print(nomes[n])
-- ERROR:
File "XXXX", line 25
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
